# tg-shop-bot

./: .gitignore  Makefile  main.py  pyproject.toml
config/: .env.example  settings.py
database/: __init__.py
database/models/: book.py  books.py  category.py  user.py
filters/: check_buy_item.py
handlers/: __init__.py  catalog.py  info.py  profile.py  start.py
keyboards/: catalog.py  menu.py  profile.py
middlewares/: __init__.py  session.py
repositories/: books.py  categories.py  user.py
states/: profile.py
